fixed overlapping menu

--- a/src/views/global/header/header.component.sass
+++ b/src/views/global/header/header.component.sass
@@ -15,7 +15,7 @@ header
       height: 100%
       padding: .25rem
 
-      @include responsive(lt-sm)
+      @include responsive(lt-md)
         img:last-of-type
           display: none
 
